objects/Platinum_Team__c.object
<CustomObject>
    <fields>
        <fullName>Advisor_Admins_Image_URL__c</fullName>
        <label>Advisor Admins Image URL</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor_Admins__c</fullName>
        <label>Advisor Admins</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisors_Image_URL__c</fullName>
        <label>Advisors Image URL</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisors__c</fullName>
        <label>Advisors</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attorneys_Image_URL__c</fullName>
        <label>Attorneys Image URL</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attorneys__c</fullName>
        <label>Attorneys</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Fulfillment_Image_URL__c</fullName>
        <label>CSC Fulfillment Image URL</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Fulfillment__c</fullName>
        <label>CSC Fulfillment</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Implementation_Image_URL__c</fullName>
        <label>CSC Implementation Image URL</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Implementation__c</fullName>
        <label>CSC Implementation</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Supervisor_Image_URL__c</fullName>
        <label>CSC Supervisor Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Supervisor__c</fullName>
        <label>CSC Supervisor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paralegals_Image_URL__c</fullName>
        <label>Paralegals Image URL</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paralegals__c</fullName>
        <label>Paralegals</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Platinum Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Platinum Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platinum Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>